# vox-local

./: .gitignore  AGENTS.md  CLAUDE.md  DOLT_REMOTE.md  Makefile  README.md  docs-agent-prompt.txt  docs-legacy-concierge-kb.md  docs-linda-agent-prompt.txt  docs-mayuki-agent-prompt.txt  docs-miyuki-agent-prompt.txt  manifest  pyproject.toml
.agents/: retrospective.md  validate.md
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/: CODEOWNERS
app/: globals.css  layout.tsx
components/: AgentFeed.tsx  BottomStage.tsx  Experience.tsx
data/: gems.db  model-settings-backup-2026-07-17.json  model-settings-backup-2026-07-18.json
docs/: creator-portal.md  discovery-map.md  outbound-call-relay.md
extension/: manifest.json  options.html  options.js  popup.html  popup.js
integrations/: server.md  voxcall.md
kb/profiles/: 123456.md  208090.md  361002.md
lib/: fastpath.ts  store.ts
lib/agent/: ops.ts
meridian/: .env.local.example  CONTRIBUTING.md  README.md  package-lock.json  package.json
meridian/components/: Badges.tsx  Experience.tsx  Globe.tsx  IntroOverlay.tsx  ItineraryPanel.tsx  TopBar.tsx  VoiceOrb.tsx  icons.tsx
meridian/lib/: mapAdapter.ts  orchestrator.ts  speech.ts  store.ts  types.ts  xai-realtime.ts
schema/: gem.md  profile.md
scripts/: puffo_profile.py  puffo_session_refresh.sh  tunnel_watchdog.py
skills/hidden-gems/: SKILL.md
skills/local-guide/: SKILL.md
src/voice_local/: accounts.py  cli.py  creator_portal.html  (+7 more)
tests/: smoke.sh  test_db.py  test_mcp_server.py  test_outbound.py  test_services.py
(+21 files in other folders)
