[project]
name = "vox-local"
version = "0.1.0"
description = "vox-local — local-knowledge MCP backend for Vocal Bridge voice agents: hidden-gem data bag (SQLite), guest accounts, and Puffo booking coordination"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "mcp>=1.9",
    "python-dotenv>=1.0",
    "uvicorn>=0.30",
]

[project.scripts]
vox-local = "voice_local.cli:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_local"]
